fix z-index

--- a/src/scss/common-components/_nav.scss
+++ b/src/scss/common-components/_nav.scss
@@ -198,7 +198,7 @@
 				width: 100%;
 				right: 0;
 				top:0;
-				z-index: 2;
+				z-index: 99999;
 				background-color: $gray-light;
 				transform: translateX(100%);
 				transition: $animation transform;
